Prevent horizontal scroll

--- a/assets/scss/base/_layout.scss
+++ b/assets/scss/base/_layout.scss
@@ -4,6 +4,7 @@ body {
   font-family: 'faktum regular';
   font-size: 20px;
   line-height: 1.6;
+  overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
